[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://asset/player_idle_rust.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 10.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 10.25 )

[node name="PlayerController" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )
player_ui_node_path = NodePath("")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.25 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 3 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 40, -60 )
current = true
smoothing_enabled = true
smoothing_speed = 20.0
offset_v = 0.86
drag_margin_left = 0.16
drag_margin_top = 0.16
drag_margin_right = 0.16
drag_margin_bottom = 0.16

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4.25 )
shape = SubResource( 4 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
autostart = true

[node name="RustTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RustTimer" to="." method="_on_RustTimer_timeout"]
